<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="saedc.example.com.LoginPage.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignBottom="@+id/Name1"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_app" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_margin="16dp">

            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayou2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_margin="16dp">

            <EditText
                android:id="@+id/Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/salary"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/calendarButto"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/button_bordered"
            app:srcCompat="@drawable/a_today" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/button_bordered_save"
            android:contentDescription="@string/scan_receipt"
            android:textColor="@color/colorAccent"
            app:srcCompat="@drawable/icon_save" />


    </LinearLayout>

</LinearLayout>
