<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:text="@string/add_a_spending"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="المصدر"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CategoryButton">

                    <EditText
                        android:id="@+id/source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="9dp"
                    android:hint="@string/saving_price"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                    <EditText
                        android:id="@+id/quantity_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <EditText
                        android:id="@+id/description_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/camera_button"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_bordered"
                    android:contentDescription="@string/save"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:srcCompat="@drawable/icon_camera" />

                <ImageButton
                    android:id="@+id/delete_button"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_bordered"
                    android:contentDescription="@string/delete"
                    android:textColor="@color/colorAccent"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:srcCompat="@drawable/icon_delete" />

                <ImageButton
                    android:id="@+id/save_button"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_bordered_save"
                    android:contentDescription="@string/scan_receipt"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:srcCompat="@drawable/icon_save" />

                <Button
                    android:id="@+id/CategoryButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/button_bordered"
                    android:contentDescription="@string/scan_receipt"
                    android:text="الرجاء إختيار النوع"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
